# libaudec

./: .gitignore  CHANGELOG.md  README  README.md  link.map.in  meson.build  meson_options.txt
.builds/: archlinux.yml  debian10.yml  debian9.yml  fedora.yml  freebsd.yml  ubuntu-lts.yml  ubuntu-next.yml  ubuntu-oldlts.yml
inc/: ad.h  ad_plugin.h  audec.h  meson.build
inc/audec/: audec.h
src/: ad_ffmpeg.c  ad_minimp3.c  ad_plugin.c  ad_soundfile.c  main.c  meson.build
tests/: README  helper.h  log.c  meson.build  test.c
