# Copyright (C) 2019 Alexandros Theodotou <alex at zrythm dot org>
#
# This file is part of libaudec
#
# libaudec is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# libaudec is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Affero General Public License for more details.
#
# You should have received a copy of the GNU Affero General Public License
# along with libaudec.  If not, see <https://www.gnu.org/licenses/>.

option (
  'ffmpeg',
  type: 'feature',
  value: 'disabled',
  yield: true,
  description: 'Compile with ffmpeg (for MP3 support)')

option (
  'tests',
  type: 'boolean',
  value: true,
  yield: true,
  description: 'Compile tests')

option (
  'mp3_tests',
  type: 'boolean',
  value: false,
  description: 'Compile mp3 tests')
